[gd_scene load_steps=3 format=3 uid="uid://c8kt4hrcioqbj"]

[ext_resource type="Texture2D" uid="uid://mq8lfp15cai8" path="res://assets/img/items/coin/coin-0.png" id="1_02wyq"]
[ext_resource type="Script" path="res://scenes/board_item/board_item.gd" id="1_p331t"]

[node name="BoardItem" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -400.0
offset_bottom = -750.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
script = ExtResource("1_p331t")

[node name="ItemImg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("1_02wyq")
expand_mode = 3
stretch_mode = 4

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="ItemImg" to="." method="_on_item_img_gui_input"]
